Sanitize Test/javaOptions arguments